feat: 파인튜닝을 감성점수 기반, 문맥 유사도 기반 두 개로 각각 하고 벡터화

--- a/_environment.yml
+++ b/_environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
+  - python=3.12
   - numpy
   - tqdm
   - pandas
@@ -27,5 +27,6 @@ dependencies:
       - datasets
       - accelerate
       - streamlit
+      - sentence-transformers
 # 설치 법
 # conda env update -f _environment.yml
